# Cosine-Plateau-Scheduler

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.dev/: README.md
.dev/context/: CHANGELOG.md  DEVELOPMENT_NOTES.md  GETTING_STARTED.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_SUMMARY.md  PUBLISHING.md
examples/: basic_usage.py  generate_graphics.py  visualize_scheduler.py
src/cosine_plateau_scheduler/: __init__.py  scheduler.py
tests/: __init__.py  test_scheduler.py
